cloud-formation/auto-scaling-stack.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Deploy an Auto Scaling Group'

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  ImageId:
    Type: String
    Description: 'AMI ID for the EC2 instance'
    Default: 'ami-053a45fff0a704a47'

  InstanceType:
    Type: String
    Default: 't2.micro'

  VpcId:
    Type: String
    Description: 'VPC ID for the EC2 instance'
    Default: 'vpc-0977d6e274954f035'

  SubnetId:
    Type: String
    Description: 'Subnet ID for the EC2 instance'
    Default: 'subnet-01b5de9df3e60a25e'

Resources:
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: 'Allow HTTP and SSH access'
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
      Tags:
        - Key: Name
          Value: dev-scurity

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: dev-template
      LaunchTemplateData:
        ImageId: !Ref ImageId
        InstanceType: !Ref InstanceType
        SecurityGroupIds:
          - !GetAtt SecurityGroup.GroupId
        KeyName: !Ref KeyName
        UserData:
          Fn::Base64: !Sub |
            # !/bin/bash
             yum update -y  # For Amazon Linux; use `apt update -y` for Ubuntu
             yum install -y httpd  # Apache Web Server
             systemctl enable httpd
             systemctl start httpd
             echo "<h1>Hello from Auto Scaling EC2!</h1>" > /var/www/html/index.html

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: 1
      MaxSize: 3
      DesiredCapacity: 1
      VPCZoneIdentifier:
        - !Ref SubnetId
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
